recursion.cons.nfirst.Nfirst.scala.error
Erreur de compilation :
Nfirst:4: error: type mismatch;
 found   : Int
 required: List[Int]
    return(l.head);
             ^