recursion.cons.nfirst.Nfirst.scala.code
def nfirst(l:List[Int], n:Int): List[Int] = {
  if (n==1){
    return(l.head);
  }else{
    return(l.head::nfirst(l.tail,n-1));
  }
}